added: filter by brand, sort by 3 types, founded items number

--- a/add-me/add-index.html
+++ b/add-me/add-index.html
@@ -48,7 +48,7 @@
                 <label for="text">Launch date</label>
                 <input
                   id="launchDateInput"
-                  type="text"
+                  type="date"
                   placeholder="xxxx-xx-xx (date-month-day)"
                 />
               </div>
@@ -102,10 +102,10 @@
 
             <div class="add-button">
               <button id="add" class="btn btn-outline-secondary">
-                Add property
+                Add item
               </button>
               <button id="go-back" class="btn btn-outline-secondary">
-                <a href="/2024-01-29_CAO_fetch_api/index.html">Go back</a>
+                <a href="../index.html">Go back</a>
               </button>
             </div>
           </div>
